--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Showcase for all my <strong>Odin Projects</strong> </h1>
     <h2>Foundations</h2>
     <ol>
-        <li><a href="foundations/odin-recipes/index.html">The Recipe Book</a></li>
+        <li><a href="foundations/odin-recipes/">The Recipe Book</a></li>
     </ol>
 </body>
 </html>
