refactor: changed odin-recipes index.html

--- a/foundations/odin-recipes/index.html
+++ b/foundations/odin-recipes/index.html
@@ -16,6 +16,9 @@
     <li><a href="recipes/moong_dal.html">Moong Dal Recipe</a>    </li>
     <li><a href="recipes/fish_tacos.html">Fish Tacos Recipe</a>    </li>
 </ul>
+<br>
+<hr>
+<a href="../../">Back to Showcase</a>
 </body>
 
 </html>
